tests/NormalTests/paczka1/small_fuzzy/65790330.err
Error in line 4: 6E6 S466 6,47
Error in line 11: rotjZx9d00 S466 65,8
Error in line 10: NZWLcCYT16 S612 66,2
